--- a/root/propuestas.html
+++ b/root/propuestas.html
@@ -10,4 +10,39 @@
     </body>
 
 
-</html>
+</html> 
+
+Tema 1 de: Flores Colin Luis Jesus
+<hgroup>
+<h1>Hipertrofia</h1>
+<h3>Sobrecarga Progresiva</h3>
+<h3>Fallo muscular</h3>
+<h3>Repetición Maxima</h3>
+
+<hgroup>
+
+<p>Descripción del tema</p>
+En este tema se veran conceptos como la hipertrofia la cual es el estimulo que se le da al musculo con las pesas y maquinas
+en el gimnasio para que este aumente su tamaño a lo ancho. Y tambien la sobrecarga progresiva la cual es ir progresando conforme
+el tiempo para levantar más peso y no estancarnos. Por otro lado el fallo muscular el cual es cuando despues de cierto tiempo realizando un ejercicio nuestro cuerpo 
+ya no puede con otra repetición, mientras que la repetición maxima es aquella que logramos hacer con la maxima carga en cualquier ejercicio: ya sea bench press, squat.
+
+Fin tema 1
+
+
+Tema 2 de Flores Colin Luis Jesus.
+</hgroup>
+
+<h1>Masa muscular</h1>
+<h3>Recomposición Corporal</h3>
+<h3>Deficit Calórico</h3>
+<h3>Superavit</h3>
+
+</hgroup>
+<p>En este segundo tema veremos la masa muscula la cual es la encargada de formar musculo, asi como la recomposición corporal la cual es una etapa en la que nuestro cuerpo no gana ni pierde peso
+simplemente se recompone haciendo que si por ejemplo pesas 60 kilos y 20 de ellos son de grasa, tu cuerpo eliminara esa grasa mientras aumentas musculo. Por otro lado el deficit calórico nos ayuda a reducir nuestra
+ingesta clorica y hacer que podamos perde grasa. Mientras que el superavit es una etapa en la que tenemos que comer mas para que nuestro pueda formar masa muscular y eventualmente subir de peso.
+</p>
+
+
+Fin tema 2
