--- a/root/propuestas.html
+++ b/root/propuestas.html
@@ -46,3 +46,19 @@ ingesta clorica y hacer que podamos perde grasa. Mientras que el superavit es un
 
 
 Fin tema 2
+
+<!-- Tema3 de: Martin Guerrero Cruz-->
+<hgroup>
+    <h1>Dieta balanceada</h1>
+    <h3>¿Que es la dieta balanceada?</h3>
+</hgroup>
+<p>Una dieta balanceada consiste en incluir diferentes tipos de alimentos, en cantidades adecuadas, a fin de que el cuerpo obtenga suficiente energía y nutrición para crecer y desarrollarse apropiadamente (MedlinePlus, 2008).</p>
+<!--fin tema 3-->
+
+<!-- Tema4 de: Martin Guerrero Cruz-->
+<hgroup>
+    <h1>La obesidad</h1>
+    <h3>La obesidad en Mexico</h3>
+</hgroup>
+<p>La obesidad se puede prevenir. En México, el 70% de los mexicanos padece sobrepeso y casi una tercera parte sufre de obesidad, además, esta enfermedad se asocia principalmente con la diabetes y enfermedades cardiovasculares, pero también con trastornos óseos y musculares y algunos tipos de cáncer.</p>
+<!-- fin tema 4-->
