--- a/root/propuestas.html
+++ b/root/propuestas.html
@@ -12,7 +12,7 @@
 
 </html> 
 
-Tema 1 de: Flores Colin Luis Jesus
+<!-- Tema1 de: Flores Colin Luis Jesus-->
 <hgroup>
 <h1>Hipertrofia</h1>
 <h3>Sobrecarga Progresiva</h3>
@@ -27,16 +27,20 @@ en el gimnasio para que este aumente su tamaño a lo ancho. Y tambien la sobreca
 el tiempo para levantar más peso y no estancarnos. Por otro lado el fallo muscular el cual es cuando despues de cierto tiempo realizando un ejercicio nuestro cuerpo 
 ya no puede con otra repetición, mientras que la repetición maxima es aquella que logramos hacer con la maxima carga en cualquier ejercicio: ya sea bench press, squat.
 
-Fin tema 1
 
 
-Tema 2 de Flores Colin Luis Jesus.
+
+<!-- fin tema 1-->
 </hgroup>
+
+
+<!-- Tema2 de: Flores Colin Luis Jesus-->
 
 <h1>Masa muscular</h1>
 <h3>Recomposición Corporal</h3>
 <h3>Deficit Calórico</h3>
 <h3>Superavit</h3>
+
 
 </hgroup>
 <p>En este segundo tema veremos la masa muscula la cual es la encargada de formar musculo, asi como la recomposición corporal la cual es una etapa en la que nuestro cuerpo no gana ni pierde peso
@@ -45,7 +49,7 @@ ingesta clorica y hacer que podamos perde grasa. Mientras que el superavit es un
 </p>
 
 
-Fin tema 2
+<!-- fin tema 2-->
 
 <!-- Tema3 de: Martin Guerrero Cruz-->
 <hgroup>
