--- a/eval.html
+++ b/eval.html
@@ -1,3 +1,7 @@
+<!-- Flores Colin Luis Jesus-->
+<!-- Martin Guerrero Cruz-->
+
+
 <!------------------------------------------------->
 <!-- Evaluación PAE-1 (a tiempo) 2 nov 21-->
 <!-------------------------------------------------
@@ -16,4 +20,35 @@
     comentarios: buenos temas, faltó añadir estructura básica en index.html y el contenido siempre debe escribirse dentro de body en propuestas.html  el código de la estructura básica en propuestas.html no está comentado. por eso perdieron 0.5 de orden. El archivo root no existe realmente así le llamamos a la carpeta que contiene el repo, por eso lo eliminé. 
 ------------------------------------------------->
 <!-- Calificación: 8.5 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-2 (a tiempo) 22 nov-->
+<!-------------------------------------------------
+    Código:              1 pts de 3 
+    Contenido:           0 pts de 3
+
+    Seguimiento 
+    de instrucciones:    0 pts de 1.5
+    Orden:               0 pts de 1.5
+
+    Corrección 
+    de errores:          0 pts de 1
+    Criterio del
+    Profesor:            0 pts de 1
+
+    comentarios: No se están esforzando lo mínimo necesario para aprender, no están atendiendo a mis comentarios, si no están entendiendo los paes no han preguntado en clase, ni en Slack. Están poniendo en grave peligro su calificación de periodo.
+------------------------------------------------->
+<!-- Calificación: 1 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-3 (Fuera de tiempo) 22 nov-->
+<!-------------------------------------------------
+Código:              0 pts de 4 
+Contenido:           0 pts de 2
+
+Comentarios: PAE no entregado.
+------------------------------------------------->
+<!-- Calificación: 0 pts de 6       -->
 <!------------------------------------------------->
