--- a/tema3.html
+++ b/tema3.html
@@ -10,7 +10,7 @@
     <section>
         <!-- empieza el titulo del blog -->
         <header>
-            <h1>¿Que es una dieta balanceada?</h1>
+            <h1>¿Que es una dieta balanceadaw?</h1>
         </header>
         <!-- termina titulo del blog -->
 
