Se completaron las 100 palabras del contenido

--- a/tema1.html
+++ b/tema1.html
@@ -10,7 +10,7 @@
     <section>
         <!-- empieza el titulo del blog -->
         <header>
-            <h1>¿Como ganar masa muscular?</h1>
+            <h1>La importancia de la masa muscular</h1>
         </header>
         <!-- termina titulo del blog -->
 
@@ -21,15 +21,18 @@
     <header>
     <hgroup>
     <!--Titulo del articulo-->
-    <h2>Título del artículo</h2>
+    <h2>¿Que  es? ¿y como desarrollarla?</h2>
     <!-- Fecha en La que se escribió el artículo -->
-    <h4>dd/mes/aa</h4>
+    <h4>28/11/21</h4>
     </hgroup>
     <header>
     <!-- inicia contenido de articulo -->
     <div>
-    <h3>Ejemplo de subtítulo</h3>
-    <p>Ejemplo de contenido</p>
+    <h3>El musculo no solo es sinonimo de estetica</h3>
+    <p>Seguro que todos una vez hemos pasado por la calle y vimos un hombre con musculos enormes y por nuestra cabeza paso, ¿como podre tener ese cuerpo?. Bien la masa muscular es el volumen que se presentan en los musculos, estos sirven para realizar diversas actividades. 
+        Para lograr tenerlos es  importante consumir las suficientes calorias y proteinas asi como tambien darles el suficiente estimulo cuando vamos al gym y los entrenamos. Ponte un momento en el lugar de tus musculos y preguntate "¿De que me sirve estar grande si no ocupo este tamaño muscular para hacer algo que involucre esfuerzo?"
+        Y no solo es una cuestión de "estar mamado" porque los habitos que hagamos en nuestra vida repercuten en nuestra vejez, muchos ancianos llegan perdiendo kilos de musculo en esta etapa, ¿por que? porque nunca cuidaron su cuerpo y no le dieron importancia debida, y por ello estan pagando estas facturas.
+    </p>
     </div>
     <!-- Termina contenido de articulo -->
     <footer>
