--- a/tema2.html
+++ b/tema2.html
@@ -10,7 +10,7 @@
     <section>
         <!-- empieza el titulo del blog -->
         <header>
-            <h1>¿Que es? y ¿Como hacerla correctamente</h1>
+            <h1>El gran poder de la Recomposición corporal</h1>
         </header>
         <!-- termina titulo del blog -->
 
@@ -21,15 +21,18 @@
     <header>
     <hgroup>
     <!--Titulo del articulo-->
-    <h2>Título del artículo</h2>
+    <h2>¿Que es? y ¿Como hacerla correctamente?</h2>
     <!-- Fecha en La que se escribió el artículo -->
-    <h4>dd/mes/aa</h4>
+    <h4>28/11/21</h4>
     </hgroup>
     <header>
     <!-- inicia contenido de articulo -->
     <div>
-    <h3>Ejemplo de subtítulo</h3>
-    <p>Ejemplo de contenido</p>
+    <h3>El don de los principiantes en el gym</h3>
+    <p>Empecemos por definir que esto, esta es una fase en la cual tu cuerpo se recompone generalmente ocurre cuando eres principiante en el gym o cuando construiste un buen fisico pero dejaste de realizar ejercicio por un periodo de tiempo largo
+       es aqui cuando el cuerpo sube musculo mientras baja grasa, por ejemplo si medias 1.73 m y pesabas 70 kilos con un porcentaje de grasa de 17%, tu cuerpo perdera grasa al mismo tiempo que ganas musculo, claro que para llevar esto acabo se necesita de una alimentación que cumpla con tus calorias de mantenimiento.
+       Regresando al ejemplo ese porcentaje de 17% se convertira en un 14% y esos 70 kilos en 75 respectivamente, claro haciendo las cosas muy bien. Por que de otra manera solo desperdiciamos esta etapa, que es una de las mejores para ver los primeros cambios importantes en nuestro fisico.
+    </p>
     </div>
     <!-- Termina contenido de articulo -->
     <footer>
