Se agrego contenido

--- a/tema3.html
+++ b/tema3.html
@@ -21,15 +21,17 @@
     <header>
     <hgroup>
     <!--Titulo del articulo-->
-    <h2>Título del artículo</h2>
+    <h2>Esto es una dieta balanceada</h2>
     <!-- Fecha en La que se escribió el artículo -->
-    <h4>dd/mes/aa</h4>
+    <h4>28/11/2021</h4>
     </hgroup>
     <header>
     <!-- inicia contenido de articulo -->
     <div>
-    <h3>Ejemplo de subtítulo</h3>
-    <p>Ejemplo de contenido</p>
+    <h3>Todo lo que es una dieta balanceada</h3>
+    <p>Comer una dieta bien balanceada puede ayudarle a disminuir el riesgo de contraer varias enfermedades así como a mantener un peso saludable.
+       Hay ciertas ocasiones en las que es particularmente importante asegurarse de seguir una dieta saludable, por ejemplo, si desea bajar de peso o si está cuidando lo que come porque está embarazada. 
+       Sin embargo, es importante comer una dieta balanceada toda su vida, sin importar qué edad tenga; nunca es mal momento para hacer cambios y mejorar sus hábitos alimentarios.</p>
     </div>
     <!-- Termina contenido de articulo -->
     <footer>
