--- a/tema4.html
+++ b/tema4.html
@@ -21,15 +21,17 @@
     <header>
     <hgroup>
     <!--Titulo del articulo-->
-    <h2>Título del artículo</h2>
+    <h2>Plato del buen comer</h2>
     <!-- Fecha en La que se escribió el artículo -->
-    <h4>dd/mes/aa</h4>
+    <h4>28/11/2021</h4>
     </hgroup>
     <header>
     <!-- inicia contenido de articulo -->
     <div>
-    <h3>Ejemplo de subtítulo</h3>
-    <p>Ejemplo de contenido</p>
+    <h3>Estos alimentos son de una dieta balanceada</h3>
+    <p>Incluir diferentes tipos de alimentos, en cantidades adecuadas, a fin de que el cuerpo obtenga suficiente energía y nutrición para crecer y desarrollarse apropiadamente.
+       Alimentos con almidón, incluidos el pan, las pastas, el arroz y las papas. frutas y verduras. leche y otros productos lácteos. carne, pescado, huevos, frijoles y otras fuentes no lácteas de proteínas.
+       Una dieta equilibrada es muy importante para el sistema inmunológico, pues te sentirás y te verás muy bien, al mismo tiempo tendrás mucha más energía para seguir adelante durante todo el día, a esto se le suma la salud de tu cuerpo al ser resistente a las enfermedades, en resumen, bienestar total en tu vida.</p>
     </div>
     <!-- Termina contenido de articulo -->
     <footer>
