Se agrego contenido

--- a/tema3.html
+++ b/tema3.html
@@ -6,6 +6,14 @@
     <title>Dieta balanceada</title>   
 </head>
 <body>
+     <!-- inicia barra de navegacion -->
+     <nav>
+        <ul>
+            <li><a href="index.html"Principal></a></li>
+        </ul>
+    </nav>
+    <!-- termina barra de navegacion -->
+    
     <!-- empieza mi blog -->
     <section>
         <!-- empieza el titulo del blog -->
