--- a/como_puedo_llevar_una_dieta_balanceada.html
+++ b/como_puedo_llevar_una_dieta_balanceada.html
@@ -30,11 +30,15 @@
                     <header>
                         <!-- inicia contenido de articulo -->
                         <div>
+                            <h3>Contexto</h3>
+                            <p>Aqui escribiras una muy breve introduccion de los conceptos que abarcaras en tu tema</p>
                             <h3>Estos alimentos son de una dieta balanceada</h3>
                             <p>Incluir diferentes tipos de alimentos, en cantidades adecuadas, a fin de que el cuerpo obtenga suficiente energía y nutrición para crecer y desarrollarse apropiadamente.
                                 Alimentos con almidón, incluidos el pan, las pastas, el arroz y las papas. frutas y verduras. leche y otros productos lácteos. carne, pescado, huevos, frijoles y otras fuentes no lácteas de proteínas.
                                 Una dieta equilibrada es muy importante para el sistema inmunológico, pues te sentirás y te verás muy bien, al mismo tiempo tendrás mucha más energía para seguir adelante durante todo el día, a esto se le suma la salud de tu cuerpo al ser resistente a las
                                 enfermedades, en resumen, bienestar total en tu vida.</p>
+                                <h3>Motivación</h3>
+                                <p>Aqui escribiras que te motivo a escribir tu tema</p>
                         </div>
                         <!-- Termina contenido de articulo -->
                         <footer>
