--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -30,12 +30,23 @@
                     <header>
                         <!-- inicia contenido de articulo -->
                         <div>
+                            <h3>Contexto</h3>
+                            <p>En este se  te hablara de la masa muscular la cual es el tejido localizado en los musculos del cuerpo, a excepcion del aparato reproductor masculino, pues este no es un musculo. Todos tenemos musculos, que eso quede claro, quiza no los veas tonificados en tu cuerpo porque eres muy delgado o tienes un porcentaje de grasa elevado; si este es tu caso es posible que tengas obesidad.
+                               Ahora bien que los musculos no estan ahi porque si, estos cumplen una función en en tu vida cotidiana; por ejemplo los antebrazos, estos los usas cuando le ayudas a tu mamá a llevar las bolsas del super a casa. Otro musculo que quiza usas todo el tiempo pero que tu no te das cuenta es el abdomen. Este grupo muscular es el encargado de flexionar el tronco hacia delante, de manera lateral, 
+                               tambien lo estabiliza; por ejemplo cuando te levantas de la cama despues de una buena siesta, usas tu core o abdomen para hacerlo. Y asi podremos seguirnos con miles de ejemplos, pero estoy que entiendes de lo que va este articulo.
+                            </p>
                             <h3>El musculo no solo es sinonimo de estetica</h3>
                             <p>Seguro que todos una vez hemos pasado por la calle y vimos un hombre con musculos enormes y por nuestra cabeza paso, ¿como podre tener ese cuerpo?. Bien la masa muscular es el volumen que se presentan en los musculos, estos sirven para realizar diversas actividades.
                                 Para lograr tenerlos es importante consumir las suficientes calorias y proteinas asi como tambien darles el suficiente estimulo cuando vamos al gym y los entrenamos. Ponte un momento en el lugar de tus musculos y preguntate "¿De que me sirve estar grande si no ocupo
                                 este tamaño muscular para hacer algo que involucre esfuerzo?"
                                 Y no solo es una cuestión de "estar mamado" porque los habitos que hagamos en nuestra vida repercuten en nuestra vejez, muchos ancianos llegan perdiendo kilos de musculo en esta etapa, ¿por que? porque nunca cuidaron su cuerpo y no le dieron importancia debida, y por
                                 ello estan pagando estas facturas.
+                            </p>
+                            <h3>Motivación</h3>
+                            <p>He sido motivado a escribir este tema porque desde el principio de este año me canse de ser una persona muy delgada, me puse como meta ganar peso y eventualmente tener un cuerpo similar al de "Michael B Jordan" más especificamente al cuerpo que tuvo en el papel de Creed durante el rodaje de la misma. 
+                                Todo mundo trato de apagar mi sueño con malos pronosticos, pero yo sabia a donde iba y nada me podría detener. Asi fue que ante todo mal pronostico fue que pase de pesar 51 kilos, a 60 en poco menos de un año. Y me animado a escribir esto para que toda la gente que lea esta vea que si se puede, y si yo puede
+                                tu tambien puedes. 
+                            
                             </p>
                         </div>
                         <!-- Termina contenido de articulo -->
