--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -30,6 +30,10 @@
                     <header>
                         <!-- inicia contenido de articulo -->
                         <div>
+                            <h3>Contexto</h3>
+                            <p>Aqui se te hablara de esta estrategia nutricional, una estrategia nutricional es una manera en la tu nutriologo o el encargado de tu plan determinara si es viable usarlo o no, esto lo pueden determinar de varias maneras (de hecho son los unicos casos favorables). El paciente 
+                                es una persona principiante o es una persona que ha dejado el fitnees por un tiempo, y ahora lo quiere retomar. En esta estrategia tu cuerpo perdera grasa al mismo tiempo que ganas musculo. Asi como esta estrategia hay muchas como por ejemplo; el Deficit Calorico, Superavit entre otras.
+                            </p>
                             <h3>El don de los principiantes en el gym</h3>
                             <p>Empecemos por definir que esto, esta es una fase en la cual tu cuerpo se recompone generalmente ocurre cuando eres principiante en el gym o cuando construiste un buen fisico pero dejaste de realizar ejercicio por un periodo de tiempo largo
                                 es aqui cuando el cuerpo sube musculo mientras baja grasa, por ejemplo si medias 1.73 m y pesabas 70 kilos con un porcentaje de grasa de 17%, tu cuerpo perdera grasa al mismo tiempo que ganas musculo, claro que para llevar esto acabo se necesita de una alimentación
@@ -37,6 +41,12 @@
                                 Regresando al ejemplo ese porcentaje de 17% se convertira en un 14% y esos 70 kilos en 75 respectivamente, claro haciendo las cosas muy bien. Por que de otra manera solo desperdiciamos esta etapa, que es una de las mejores para ver los primeros cambios importantes en
                                 nuestro fisico.
                             </p>
+                            <h3>Motivación</h3>
+                            <p>He sido motivado a escribir con mis propias este articulo digno de la compresión de cualquier lector con la suficiente capacidad neuronal para comprender lo tratado aqui, bien vayamos al grano. Me motive para escribir esto porque cuando eres un principiante en el gym, la recomposición corporal 
+                                es de las mejores cosas que te pueden pasar, porque en esa etapa ganaras mucho musculo y veras cambios rapidos, por eso lo escribo para que gente que es principiante no desaproveche esta oportunidad porque pasa en pocos casos.
+                            </p>
+                        
+                            
                         </div>
                         <!-- Termina contenido de articulo -->
                         <footer>
