--- a/dieta_balanceada.html
+++ b/dieta_balanceada.html
@@ -38,10 +38,16 @@
                     <header>
                         <!-- inicia contenido de articulo -->
                         <div>
+                            <h3>Contexto</h3>
+                            <p>Aqui escribiras una muy breve introduccion de los conceptos que abarcaras en tu tema</p>
                             <h3>Todo lo que es una dieta balanceada</h3>
                             <p>Comer una dieta bien balanceada puede ayudarle a disminuir el riesgo de contraer varias enfermedades así como a mantener un peso saludable.
                                 Hay ciertas ocasiones en las que es particularmente importante asegurarse de seguir una dieta saludable, por ejemplo, si desea bajar de peso o si está cuidando lo que come porque está embarazada.
                                 Sin embargo, es importante comer una dieta balanceada toda su vida, sin importar qué edad tenga; nunca es mal momento para hacer cambios y mejorar sus hábitos alimentarios.</p>
+                                <h3>Motivación</h3>
+                                <p>Aqui escribiras que te motivo a escribir tu tema</p>
+                                     
+
                         </div>
                         <!-- Termina contenido de articulo -->
                         <footer>
