Se hizo barra de nav

--- a/dieta_balanceada.html
+++ b/dieta_balanceada.html
@@ -11,7 +11,7 @@
     <!-- inicia barra de navegacion -->
     <nav>
         <ul>
-            <li><a href="index.html" Principal></a></li>
+            <li><a href="index.html">Principal </a></li>
         </ul>
     </nav>
     <!-- termina barra de navegacion -->
