--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+
+    <!-- inicia barra de navegacion -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Principal </a></li>
+        </ul>
+    </nav>
+    <!-- termina barra de navegacion -->
+
     <!-- empieza mi blog -->
     <section>
         <!-- empieza el titulo del blog -->
