Se termino barra de nav

--- a/dieta_balanceada.html
+++ b/dieta_balanceada.html
@@ -12,6 +12,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Principal </a></li>
+            <li><a href="como_puedo_llevar_una_dieta_balanceada.html">como puedo llevar una dieta balanceada </a></li>
+            <li><a href="masa_muscular.html">masa muscular</a></li>
+            <li><a href="recomposicion_corporal">recomposicion corporal </a></li>
         </ul>
     </nav>
     <!-- termina barra de navegacion -->
