--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -13,6 +13,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Principal </a></li>
+            <li><a href="como_puedo_llevar_una_dieta_balanceada.html">como puedo llevar una dieta balanceada </a></li>
+            <li><a href="dieta_balanceada">dieta balanceada </a></li>
+            <li><a href="masa_muscular">masa muscular </a></li>
         </ul>
     </nav>
     <!-- termina barra de navegacion -->
