--- a/como_puedo_llevar_una_dieta_balanceada.html
+++ b/como_puedo_llevar_una_dieta_balanceada.html
@@ -13,6 +13,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Principal </a></li>
+            <li><a href="dieta_balanceada.html">dieta balanceada</a></li>
+            <li><a href="masa_muscular.html">masa muscular</a></li>
+            <li><a href="recomposicion_corporal.html">recomposicion corporal</a></li>
         </ul>
     </nav>
     <!-- termina barra de navegacion -->
