@eval: se evaluó el pae5

--- a/eval.html
+++ b/eval.html
@@ -52,3 +52,52 @@ Comentarios: PAE no entregado.
 ------------------------------------------------->
 <!-- Calificación: 0 pts de 6       -->
 <!------------------------------------------------->
+
+
+<!-- 1 dic | @sergiortellez: Se hicieron acuerdos en reunión por zoom:
+
+1) los integrantes del equipo responderán los mensajes en slack en menos de 24 horas.
+2) La comunicación debe ser humana, interesada, y de calidad.
+3) habrá una hora en común para hacer los paes en equipo.
+4) entregarán hasta el PAE 5 PERFECTO antes de la evaluación. De ser así, se borrarán las calificaciones antiguas y se calificará con 10, no examen. 
+
+-->
+
+<!-- 13 ene: Entregaron hasta el PAE 4, no hasta el 5 como habíamos quedado, sse les va a ayudar por el esfuerzo, pero no podrán ser evaluados con 10.   -->
+
+<!-- Calificaciones modificadas:
+Pae 1: 10
+Pae 2: 10
+Pae 3: 10
+-->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-4 (a tiempo) 13 ene-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           3 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            0 pts de 1
+
+    comentarios: buen trabajo, aprovecharon bien el checkpoint.
+------------------------------------------------->
+<!-- Calificación: 10 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-5 (Fuera de tiempo) 13 ene-->
+<!-------------------------------------------------
+Código:              0 pts de 4 
+Contenido:           0 pts de 2
+
+Comentarios: PAE noo entregado.
+------------------------------------------------->
+<!-- Calificación: 0 pts de 6       -->
+<!------------------------------------------------->
