--- a/eval.html
+++ b/eval.html
@@ -101,3 +101,5 @@ Comentarios: PAE noo entregado.
 ------------------------------------------------->
 <!-- Calificación: 0 pts de 6       -->
 <!------------------------------------------------->
+
+<!-- 14 dic | @sergiortellez: Se volvió a evaluar el Pae5, pero falta la entrada de investigación completa. No se usaron las etiquetas, <cite>, <q>, <meter>. Favor de completar en la siguiente entrega. Nueva calificación para Flores Colín: 6,  Guerrero Cruz no entregó trabajo nuevo.  -->
