--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -5,6 +5,7 @@
         <!-- Carga los caracteres latinos -->
         <meta charset="UTF-8">
         <title>Recomposición Corporal</title>
+        <link rel="stylesheet" href="assets/styles/estilos_luis.css">
     </head>
 
     <body>
@@ -12,7 +13,7 @@
         <!-- inicia barra de navegacion -->
         <nav>
             <ul>
-                <li><a href="index.html">Principal </a></li>
+                <li><a class="resaltado" href="index.html" target="_blank">Principal </a></li>
                 <li><a href="como_puedo_llevar_una_dieta_balanceada.html">como puedo llevar una dieta balanceada </a>
                 </li>
                 <li><a href="dieta_balanceada">dieta balanceada </a></li>
