--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -5,6 +5,7 @@
         <!-- Carga los caracteres latinos -->
         <meta charset="UTF-8">
         <title>Masa muscular</title>
+        <link rel="stylesheet" href="assets/styles/estilos_luis.css">
     </head>
 
     <body>
@@ -12,11 +13,13 @@
         <!-- inicia barra de navegacion -->
         <nav>
             <ul>
-                <li><a href="index.html">Principal </a></li>
+                <li><a class="resaltado" href="index.html" target="_blank">Principal </a></li>
                 <li><a href="como_puedo_llevar_una_dieta_balanceada.html">como puedo llevar una dieta balanceada </a>
                 </li>
                 <li><a href="dieta_balanceada.html">dieta balanceada </a></li>
                 <li><a href="recomposicon_corporal">recoposicion corporal </a></li>
+
+
             </ul>
         </nav>
         <!-- termina barra de navegacion -->
