--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -476,6 +476,77 @@
 
 
 
+                            <!-- inicia entrada: nombre_del_artículo -->
+                            <article>
+                                <header>
+                                    <hgroup>
+                                        <!-- Título del artículo con ícono -->
+                                        <h2> <img src="assets/images/musculo (3).png" alt="invest" height="35px"
+                                                width="auto"> Video</h2>
+                                        <!-- Fecha en la que se escribió el artículo -->
+                                        <h4>14/01/21</h4>
+                                    </hgroup>
+                                </header>
+                                <!-- inicia contenido del artículo -->
+                                <div>
+
+
+
+
+
+
+
+
+                                    <!-- inicia ilustración del artículo -->
+                                    <figure>
+                                        <figcaption>¿QUÉ ES LA MASA MUSCULAR? & RECOMPOSICIÓN CORPORAL(video)
+                                        </figcaption>
+
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/psXR9t4lpOI"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+
+
+
+                                    </figure>
+                                    <!-- termina ilustración del artículo -->
+
+                                </div>
+                                <!-- Termina contenido del artículo -->
+
+                                <footer>
+                                    <!-- Datos del autor -->
+                                    <div>
+                                        <span>Flores Colin Luis Jesus</span> <a
+                                            href="https://www.instagram.com/luiss.rawrr/?hl=es-la"
+                                            target="_blank">@luiss.rawrr en instagram</a>
+                                    </div>
+                                    <!-- fin datos del autor -->
+                                    <!-- bibliografía -->
+                                    <blockquote>
+                                        <p>Fuente: UNAM (2016) & IPN(2015) ------>Autores corporativos
+                                            Elaboración propia.</p>
+
+
+
+
+                                        </p>
+                                    </blockquote>
+                                    <!-- fin bibliografía -->
+                                </footer>
+                            </article>
+
+
+
+
+
+
+
+
+
+
+
 
                 </article>
 
