PAE7 Terminado FAVOR DE REVISAR EL CODIGO!!!!!!!!!

--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -97,7 +97,7 @@
 
                             <I-- Inicia ilustración del artículo -->
 
-                                <figure>
+                                <figure class="ilustracion">
 
                                     <img src="assets/images/fuerte.png" alt="ilustracion 1° articulo" height="600px"
                                         width="auto">
@@ -172,7 +172,7 @@
 
                             <I-- Inicia ilustración del artículo -->
 
-                                <figure>
+                                <figure class="ilustracion">
 
                                     <img src="assets/images/musculo (3).png" alt="ilustracion 2° articulo"
                                         height="600px" width="auto">
@@ -237,7 +237,7 @@
 
                             <I-- Inicia ilustración del artículo -->
 
-                                <figure>
+                                <figure class="ilustracion">
 
                                     <img src="assets/images/proteina.png" alt="ilustracion 3° articulo" height="600px"
                                         width="auto">
@@ -282,7 +282,7 @@
                             <!-- inicia contenido de articulo -->
                             <div>
 
-                                <figure>
+                                <figure class="ilustracion">
 
                                     <iframe width="200" height="200" src="https://www.youtube.com/embed/bHjPaeIpWI8"
                                         title="YouTube video player" frameborder="0"
@@ -421,7 +421,7 @@
 
 
                                     <!-- inicia ilustración del artículo -->
-                                    <figure>
+                                    <figure class="ilustracion">
                                         <img src="assets/images/musculo (3).png" alt="ilustracion 1º artículo"
                                             height="600px" width="auto">
                                         <figcaption>Ejercicio y dieta y descanso van de la mano.</figcaption>
@@ -493,7 +493,7 @@
 
 
                                     <!-- inicia ilustración del artículo -->
-                                    <figure>
+                                    <figure class="ilustracion">
                                         <figcaption>¿QUÉ ES LA MASA MUSCULAR? (video)</figcaption>
 
                                         <iframe width="560" height="315" src="https://www.youtube.com/embed/psXR9t4lpOI"
@@ -548,7 +548,7 @@
             <!-- termina barra lateral -->
 
             <!-- empieza el footer -->
-            <footer>
+            <footer id="footer_blog">
                 <div>
                     <span>Martin Guerrero Cruz</span>
                 </div>
