@eval: se agregaron evaluaciones de los PAES 6, 7, 8 y 9

--- a/eval.html
+++ b/eval.html
@@ -103,3 +103,75 @@ Comentarios: PAE noo entregado.
 <!------------------------------------------------->
 
 <!-- 14 dic | @sergiortellez: Se volvió a evaluar el Pae5, pero falta la entrada de investigación completa. No se usaron las etiquetas, <cite>, <q>, <meter>. Favor de completar en la siguiente entrega. Nueva calificación para Flores Colín: 6,  Guerrero Cruz no entregó trabajo nuevo.  -->
+
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-6 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           3 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Excelente trabajo Luis, me gustó mucho escucharte hablar de temas que te interesan. ¡Sigue trabajando!
+------------------------------------------------->
+<!-- Calificación: 11 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-7 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           2 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Tu entrada de formato libre está listada como video privado, el código está perfecto tienes en la cabeza la estructura de un programador. Usa tus talentos siempre para el bien. 
+------------------------------------------------->
+<!-- Calificación: 10 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-8 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           1.5 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Tu código es perfecto, sólo te faltaron las entradas de formato libre, recuerda que terminar el trabajo hasta el final es muy importante. ¡Sigue así!  
+------------------------------------------------->
+<!-- Calificación: 9.5 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-9 (Fuera de tiempo) 12 mayo-->
+<!-------------------------------------------------
+Código:              4 pts de 4 
+Contenido:           2 pts de 2
+
+Comentarios: Olvidaste hacer push a este PAE, por tu excelente trabajo en los PAES anteriores voy a evaluar como si lo tuvieras, pero debo marcarlo como fuera de tiempo. Por favor actualiza tu repositorio.
+------------------------------------------------->
+<!-- Calificación: 6 pts de 6       -->
+<!------------------------------------------------->
